# SimplePDFwebReader

./: Cargo.toml  README.md  report.aux  report.out  report.tex
src/: main.rs
static/: index.html
