[package]
name = "online_pdf_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
pdf = "0.9"  # 更新到最新的0.9版本
mime = "0.3"
dotenv = "0.15"
r2d2 = "0.8"
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"